--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -12,6 +12,7 @@
 		"bootstrap": "^4.4.1",
 		"react": "^16.12.0",
 		"react-dom": "^16.12.0",
+		"react-particles-js": "^2.7.0",
 		"react-scripts": "3.3.0",
 		"react-transition-group": "1.x",
 		"reactstrap": "^8.2.0"
