--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"@fortawesome/fontawesome-svg-core": "^1.2.26",
 		"@fortawesome/free-brands-svg-icons": "^5.12.0",
+		"@fortawesome/free-solid-svg-icons": "^5.12.0",
 		"@fortawesome/react-fontawesome": "^0.1.8",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.3.2",
@@ -15,7 +16,8 @@
 		"react-particles-js": "^2.7.0",
 		"react-scripts": "3.3.0",
 		"react-transition-group": "1.x",
-		"reactstrap": "^8.2.0"
+		"reactstrap": "^8.2.0",
+		"smooth-scroll": "^16.1.0"
 	},
 	"scripts": {
 		"start": "react-scripts start",
